<resources>
    <string name="app_name">IntroSliderDemo</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Mera Bharat Mahan</string>
    <string name="slide_1_desc">It is only Indian army who never sleep  so that whole country could sleep </string>
    <string name="slide_2_title">Tiranga is our Motivation </string>
    <string name="slide_2_desc">Sr kata sakte h lekin sr jhuka sakte nhi.Apni aajadi ko hm hrgij mita sakte nhi</string>
    <string name="slide_3_title" translatable="true"> Introduction to the app </string>
    <string name="slide_3_desc">Help to the nation by helping economically to the indian army family </string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_welcome">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">Pay</string>
    <string name="save">Save and Pay</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>